# flows_pseudoaxions

./: .gitignore  LICENSE  README.md  TM_flows.py  analysis.py  analysis_example.py  analysis_utils.py  changelog  data_utils.py  defs.py  defs_flows.py  environment.yml  fedhex.jcl  fedhex.py  flow.py  flowmodel.py  gaus-test.ipynb  gaus.py  highstats.ipynb  job.sub  load_and_save.ipynb  load_and_save_full.ipynb  main.py  model_custom_load_and_save.ipynb  models-tests.ipynb  nb.ipynb  param.TOML  pyproject.toml  requirements.txt  rootflows.py  script.py  test_current.py  test_eval.py  test_flow_builder.py  test_flow_builder_nb.ipynb  test_load.ipynb  test_prior.py  test_regularizers.py  test_save.ipynb  test_saveload_MADE.py  (+9 more)
fedhex/: ROOT.py  __init__.py  _generators.py  _loaders.py  _managers.py  _modelmanagers.py  constants.py  datasets.py
fedhex/flows/: _MAF.py  __init__.py  _flows.py
fedhex/io/: __init__.py  _data.py  _loader.py  _numpy.py  _path.py  _root.py
fedhex/posttrain/: __init__.py  _analysis.py  analysis.py  plot.py
fedhex/pretrain/: __init__.py  _data.py
fedhex/pretrain/generation/: __init__.py  _gaussian.py
fedhex/tests/: __init__.py
fedhex/train/: _MAF.py  _RealNVPflow.py  __init__.py  _callbacks.py  _flow_base.py  _flowpp.py  _flows.py  _loss.py  _rq_nsf.py  _train.py
fedhex/utils/: __init__.py  _callbacks.py  _data.py  _logging.py  presets.py
flows/: flowmodel.py
tests/: gausgrid.py  rootflows.py  rootflows2.py  rootflows3.py  rootflows4.py  test.ipynb
utils/: __init__.py  analysis.py  constants.py  data.py  io.py  train.py
(+8 files in other folders)
